# design-patterns

./: README.md
src/: pyproject.toml
src/observer/: main.py  message_observable.py  message_observer.py  observable.py  observer.py
src/template_method/: file_readers.py  foo.csv  foo.json
