[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = "Repository destinated to my personal studies for design-patterns"
authors = ["Lnvictor <vh141299@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
